fix menubar menus so text does not shift and wrap on mouseover
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@28019 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/CryptoDB.css
+++ b/Site/htdocs/assets/css/CryptoDB.css
@@ -514,7 +514,7 @@ height: 240px;
 	text-align: left;
 	width: 16em;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	font-size: 14px;
 	background-color: #FFFFFF;
 	background-image: url(../images/dropdownmenu.jpg);
 	background-repeat: repeat-x;
@@ -529,7 +529,7 @@ height: 240px;
 
 #menu ul ul a:link, #menu ul ul a:visited{
 	left:100%;
-	width: 14em;
+	width: 15em;
 	color: #414141;
 	font-weight: normal;
 	padding: 6px 6px 6px 6px;
@@ -539,8 +539,7 @@ height: 240px;
 
 #menu ul ul a:hover, #menu ul ul a:active{
 	left:100%;
-	margin-left: -2px;
-	width: 12em;
+	width: 14em;
 	color: #b30101;
 	font-weight: normal;
 	background-color: #FFFFFF;
