--- a/Site/htdocs/assets/css/PlasmoDB.css
+++ b/Site/htdocs/assets/css/PlasmoDB.css
@@ -488,7 +488,7 @@ height: 240px;
 	text-align: left;
 	width: 16em;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	font-size: 14px;
 	background-color: #FFFFFF;
 	background-image: url(../images/dropdownmenu.jpg);
 	background-repeat: repeat-x;
@@ -503,7 +503,7 @@ height: 240px;
 
 #menu ul ul a:link, #menu ul ul a:visited{
 	left:100%;
-	width: 16em;
+	width: 15em;
 	color: #414141;
 	font-weight: normal;
 	padding: 6px 6px 6px 6px;
@@ -513,8 +513,7 @@ height: 240px;
 
 #menu ul ul a:hover, #menu ul ul a:active{
 	left:100%;
-	margin-left: -2px;
-	width: 16em;
+	width: 14em;
 	color: #8f0165;
 	font-weight: normal;
 	background-color: #FFFFFF;
@@ -541,7 +540,7 @@ div#menu ul ul, div#menu ul li:hover ul ul, div#menu ul ul li:hover ul ul {
 
 div#menu ul li:hover ul, div#menu ul ul li:hover ul, div#menu ul ul ul li:hover ul {
 	display:block;
-	width: 18em;
+	width: 14em;
 	text-decoration: none;
 	padding: 2px;
 	background-color: #FFFFFF;
