--- a/Site/htdocs/assets/css/TrichDB.css
+++ b/Site/htdocs/assets/css/TrichDB.css
@@ -501,7 +501,7 @@ height: 240px;
 	text-align: left;
 	width: 16em;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	font-size: 14px;
 	background-color: #FFFFFF;
 	background-image: url(../images/dropdownmenu.jpg);
 	background-repeat: repeat-x;
@@ -516,7 +516,7 @@ height: 240px;
 
 #menu ul ul a:link, #menu ul ul a:visited{
 	left:100%;
-	width: 16em;
+	width: 15em;
 	color: #414141;
 	font-weight: normal;
 	padding: 6px 6px 6px 6px;
@@ -526,8 +526,7 @@ height: 240px;
 
 #menu ul ul a:hover, #menu ul ul a:active{
 	left:100%;
-	margin-left: -2px;
-	width: 16em;
+	width: 14em;
 	color: #b30101;
 	font-weight: normal;
 	background-color: #FFFFFF;
